--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
-name = xdecor
+name = workbench
 description = A workbench for repairing tools.
 depends = default, stairs
 optional_depends = moreblocks, mesecons
