--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = workbench
 description = A workbench for repairing tools.
 depends = default, stairs
-optional_depends = moreblocks, mesecons
+optional_depends = xdecor, moreblocks, mesecons
 min_minetest_version = 5.1.0
