--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,6 @@
 name = workbench
 description = A workbench for repairing tools.
+author = kilbith, Jordan Irwin (AntumDeluge)
+min_minetest_version = 5.1.0
 depends = default, stairs
 optional_depends = xdecor, moreblocks, mesecons
-min_minetest_version = 5.1.0
